# plover_websocket_server

./: Pipfile  README.md  README.rst  setup.cfg  test_client.py
plover_engine_server/: config.py  errors.py  manager.py  server.py
plover_engine_server/websocket/: example_client.py  routes.py  server.py  views.py
plover_websocket_server/: client.py  manager.py  routes.py  server.py  views.py
